2008-09-16  higepon  <higepon@users.sourceforge.jp>

        * test/reader.scm: Added for testing reader.

2008-09-15  higepon  <higepon@users.sourceforge.jp>

        * scanner.re (class ScannerHelper): Added new scanner using re2c.

2008-09-13  higepon  <higepon@users.sourceforge.jp>

        * reader.lex (): Added read #\x41 style character.

        * reader.cpp (read): Now we use new read supported by Flex/Bison.

2008-09-12  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (pass4FixupLabelCollect): Fixed wrong type cast.

        * Object.h (DECL_TO): Added assert for wrong type cast.

        * ErrorProcedures.cpp (raiseAfter): Fixed the bug of type.

2008-09-07  higepon  <higepon@users.sourceforge.jp>

        * UTF8Codec.cpp (readWholeString): Added.

2008-09-06  higepon  <higepon@users.sourceforge.jp>

        * Object-inl.h : Break all compilation dependencies.

2008-09-04  higepon  <higepon@users.sourceforge.jp>

        * reader.lex : Added.

        * reader.y : Added for new reader.

2008-09-01  higepon  <higepon@users.sourceforge.jp>

        * example/grass.scm (parse): Applied a patch by IRIE Shinsuke.

2008-08-29  higepon  <higepon@users.sourceforge.jp>

        * library.scm (list-sort): Ported R6RS sorting from Ypsilon Scheme System by Y.FUJITA, LittleWing Company.

2008-08-28  higepon  <higepon@users.sourceforge.jp>

        * 0.0.6 released.

2008-08-26  higepon  <higepon@users.sourceforge.jp>

        * library.scm (newline): fixed bug of (newline).

        * Rewrote error system for reader.

        * ErrorProcedures.cpp (scheme::callLexicalViolationAfter): Added.

        * read.cpp (read_bytevector): Added read bytevector support.

2008-08-24  higepon  <higepon@users.sourceforge.jp>

        * library.scm: Implmented all of R6RS Enumrations.

        * read.cpp (Scm_StringToNumber): Fixed reader bug.

2008-08-23  higepon  <higepon@users.sourceforge.jp>
