@@ -1,1 +1,18 @@
-'(#f #\あ (#t) (1234 5678))
+#\newline
+"\n" abc
+#t #f #\a #\space #\あ #\x3045 "あいう" "とても長い文字列とても長い文字列とても長い文字列とても長い文字列"
+symbol シンボル 1234 -5678 (#t)
+("あ" "いう" か -123)
+#("あ" "いう" か -123)
+#vu8(123 3) #/あいう/
+(a . b)
+(a . (b . c))
+(a . ())
+"\x3065;"
+;; hige
+(a ,@b)
+moge
+#|
+(a . b)
+|#
+"xyz"
