@@ -1,1 +1,2 @@
-#\a
+#t '(#f #\あ (#t) (1234 5678))
+"hige" #\space 'あいう #\x3041
